@@ -1,0 +1,7 @@
+; brushexport.def : Declares the module parameters for the DLL.
+
+LIBRARY      "BRUSHEXPORT"
+
+EXPORTS
+    ; Explicit exports can go here
+	Radiant_RegisterModules @1
