@@ -1,3 +1,8 @@
+08/10/2006
+OrbWeaver
+- Merged upstream revisions 99 and 101
+- Merged upstream brushexport plugin (exports to OBJ)
+
 ** RELEASE 0.6.0
 
 29/09/2006
